--- a/templates/gifta.rs.html
+++ b/templates/gifta.rs.html
@@ -1,7 +1,7 @@
-@use templates::statics::{lila_css, kratsbox_css, kratsbox_js};
+@use templates::statics::{lila_css, kratsbox_js};
 @use templates::image;
-@()
 
+@()
 <!doctype html>
 <html lang="sv">
   <head>
@@ -10,7 +10,6 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <script type="text/javascript" src="/s/@kratsbox_js.name"
 	    async="async" defer="defer" onload="kratsbox('a.img')"></script>
-    <link rel="stylesheet" href="/s/@kratsbox_css.name" type="text/css" media="screen" />
   </head>
   <body>
     <div class="wrapper">
