Site-local link to subpage.

--- a/templates/index.rs.html
+++ b/templates/index.rs.html
@@ -13,8 +13,8 @@
     <p><em>Välkommen till</em></p>
     <h1><span id="k">k</span><span id="r">r</span><span id="a">a</span><span id="t">t</span><span id="s">s</span></h1>
 
-    <p>Här, i <a href="http://krats.se/gifta/">Katarinas &amp;
-    Rasmus</a> virtuella hem, kan du hitta:</p>
+    <p>Här, i <a href="/gifta/">Katarinas &amp; Rasmus</a> virtuella
+    hem, kan du hitta:</p>
 
     <ul>
       <li><a href="http://fantomenindex.krats.se/">Rasmus
