--- a/templates/error.rs.html
+++ b/templates/error.rs.html
@@ -1,4 +1,4 @@
-@use templates::statics::home_css;
+@use super::statics::home_css;
 @use warp::http::StatusCode;
 
 @(code: StatusCode, message: &str)
