--- a/templates/gifta.rs.html
+++ b/templates/gifta.rs.html
@@ -1,5 +1,5 @@
-@use templates::statics::{lila_css, kratsbox_js};
-@use templates::image;
+@use super::statics::{lila_css, kratsbox_js};
+@use super::image;
 
 @()
 <!doctype html>
