Some more serious wording on the error page.

--- a/templates/error.rs.html
+++ b/templates/error.rs.html
@@ -16,8 +16,8 @@
 
       <p>@message</p>
       <p>We are sorry about this.
-	In a real application, this would mention the incident having
-	been logged, and giving contact details for further reporting.</p>
+	Maybe one of the links on <a href="/">our front page</a> can
+	help you find what you are looking for?</p>
     </main>
   </body>
 </html>
