--- a/templates/gifta.rs.html
+++ b/templates/gifta.rs.html
@@ -6,8 +6,9 @@
 <html lang="sv">
   <head>
     <title>Rasmus &amp; Katarina</title>
-    <link rel="stylesheet" type="text/css" href="/s/@lila_css.name" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" type="text/css" href="/s/@lila_css.name" />
     <script type="text/javascript" src="/s/@kratsbox_js.name"
 	    async="async" defer="defer" onload="kratsbox('a.img')"></script>
   </head>
