--- a/templates/index.rs.html
+++ b/templates/index.rs.html
@@ -6,6 +6,7 @@
 <html lang="sv">
   <head>
     <title>krats.se</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" type="text/css" href="/s/@home_css.name"/>
   </head>
