--- a/scss/home.scss
+++ b/scss/home.scss
@@ -25,12 +25,17 @@ main {
 
 @media (prefers-color-scheme: dark) {
     body {
-	background: linear-gradient(rgb(0, 0, 60), rgba(40,0,0,0.8)) fixed,
-		    left bottom / auto 9% repeat-x url(static-name(grass.svg)) fixed,
-		    black;
-	color: #eee;
+	html.error &, & {
+	    background:
+		left top / 59vmin repeat-x url(static-name(stars.png)),
+		linear-gradient(rgba(0, 0, 120, 0.1), rgba(40,0,0,0.8)) fixed,
+		right top / 37vmin repeat-x url(static-name(stars.png)),
+		left bottom / auto 9% repeat-x url(static-name(grass.svg)) fixed,
+		black;
+	    color: #eee;
+	}
 	main {
-	    background: black;
+	    background-color: #333;
 	    color: #eee;
 	    &:before {
 		display: none;
@@ -115,8 +120,8 @@ p {
 		    linear-gradient(#89a, #568) fixed;
     }
     main {
-	background: linear-gradient(#fff, #fff, #eee, #ccc, #888) padding-box;
-	border: solid 1px rgba(white, 0.3);
+	background-image: linear-gradient(transparent, transparent, rgba(black, 0.2), rgba(black, 0.3), rgba(black, 0.4));
+	border: solid 1px rgba(white, 0.2);
 	border-width: 0 2px 2px 1px;
     }
 }
