--- a/templates/index.rs.html
+++ b/templates/index.rs.html
@@ -27,10 +27,12 @@
       <li><a href="http://rasmus.krats.se/">Rasmus Kaj</a>,
 	personlig hemsida / blog.</li>
     </ul>
-    <p>Och eventuellt relaterat på resten av webben:</p>
+    <p>Mer webb gjord av Rasmus:</p>
     <ul>
       <li><a href="http://www.albumforlaget.se/">Albumförlaget</a>
-	– webben är gjord av Rasmus.</li>
+	– De bästa Franska och Belgiska serierna på Svenska.</li>
+      <li><a href="http://lymland.se/">Lymland</a>
+	– Sonja Perander and Jerker Kaj making music.</li>
     </ul>
     </main>
   </body>
