Set dependency versions, update ructe to 0.16.1.

--- a/templates/gifta.rs.html
+++ b/templates/gifta.rs.html
@@ -1,5 +1,5 @@
 @use super::statics::{lila_css, kratsbox_js};
-@use super::image;
+@use super::image_html;
 
 @()
 <!doctype html>
@@ -22,9 +22,9 @@
       </h1>
       
       <div id="images1">
-	@:image(2251, "Inmarsch. Foto: Fredrik Arnerup.")
-	@:image(2080, "Kyssen. Foto: Fredrik Arnerup.")
-	@:image(2757, "Brudpar på bro. Foto: Harald Barth.")
+	@:image_html(2251, "Inmarsch. Foto: Fredrik Arnerup.")
+	@:image_html(2080, "Kyssen. Foto: Fredrik Arnerup.")
+	@:image_html(2757, "Brudpar på bro. Foto: Harald Barth.")
       </div>
       
       <p class="when">Sedan den 3 juli i år 2010 är vi,
@@ -57,25 +57,25 @@
 	</ul>
       </div>
       <div id="images2">
-	@:image(2418, "Brudparet. Foto: Harald Barth.")
-	@:image(2398, "Brudgumen. Foto: Harald Barth.")
-	@:image(2591, "Kusin Claudia. Foto: Harald Barth.")
+	@:image_html(2418, "Brudparet. Foto: Harald Barth.")
+	@:image_html(2398, "Brudgumen. Foto: Harald Barth.")
+	@:image_html(2591, "Kusin Claudia. Foto: Harald Barth.")
       </div>
       <div id="images3">
-	@:image(2645, "Brudparet. Foto: Harald Barth.")
-	@:image(2666, "Bruden. Foto: Harald Barth.")
-	@:image(2502, "Pappa Per Erik håller tal. Foto: Harald Barth.")
+	@:image_html(2645, "Brudparet. Foto: Harald Barth.")
+	@:image_html(2666, "Bruden. Foto: Harald Barth.")
+	@:image_html(2502, "Pappa Per Erik håller tal. Foto: Harald Barth.")
       </div>
       <div id="images4">
-	@:image(2164, "Brudklänningen beundras. Foto: Fredrik Arnerup.")
-	@:image(1871, "Samtal på terassen. Foto: Erik Wahlström.")
+	@:image_html(2164, "Brudklänningen beundras. Foto: Fredrik Arnerup.")
+	@:image_html(1871, "Samtal på terassen. Foto: Erik Wahlström.")
       </div>
       <div id="images5">
-	@:image(2799, "Sångnummer med farbröderna brothers. Foto: Harald Barth.")
-	@:image(2553, "Sångnummer med familjen Kaj. Foto: Harald Barth.")
-	@:image(2776, "Måltidssång.  Kanske summavisa?  Foto: Harald Barth.")
-	@:image(1882, "Faster Elisabeth håller tal. Foto: Erik Wahlström.")
-	@:image(2385, "Välförtjänt nöjd toastmaster. Foto: Harald Barth.")
+	@:image_html(2799, "Sångnummer med farbröderna brothers. Foto: Harald Barth.")
+	@:image_html(2553, "Sångnummer med familjen Kaj. Foto: Harald Barth.")
+	@:image_html(2776, "Måltidssång.  Kanske summavisa?  Foto: Harald Barth.")
+	@:image_html(1882, "Faster Elisabeth håller tal. Foto: Erik Wahlström.")
+	@:image_html(2385, "Välförtjänt nöjd toastmaster. Foto: Harald Barth.")
       </div>
     </div>
   </body>
